[tool.poetry]
name = "plex-music-bot"
version = "0.0.8"
description = "A python music bot"
authors = ["rehket <aalbright425@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "plex_music_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = {extras = ["voice"], version = "^2.3.2"}
youtube-search-python = "^1.6.6"
yt-dlp = "^2023.12.30"
pillow = "^10.2.0"
plexapi = "^4.15.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
